--- a/Home/03_CSS/week.css
+++ b/Home/03_CSS/week.css
@@ -1,6 +1,5 @@
 .Menu_level_1{
     width: 100px;
-    float: left;
 }
 .Menu_level_1>div{
     background-color: yellow; 
@@ -23,4 +22,32 @@
     left: 80%;
     top: 90%;
     z-index: 1;
+}
+@media all and (min-width: 616px){
+    .Menu_level_1{
+        width: 100px;
+        float: left;
+    }
+    .Menu_level_1>div{
+        background-color: yellow; 
+        border: solid blue 1px;
+        position: relative;
+        cursor: pointer;
+    }
+    .Menu_level_2{
+        width: 150px;
+        display: none;
+    }
+    .Menu_level_2>div{
+        background-color: cyan;
+        border: solid blue 1px;
+        cursor: pointer;
+    }
+    .Menu_level_1>div:hover .Menu_level_2{
+        display: block;
+        position: absolute;
+        left: 80%;
+        top: 90%;
+        z-index: 1;   
+    }
 }
