--- a/Home/CSS/02_CSS/Base/cards.css
+++ b/Home/CSS/02_CSS/Base/cards.css
@@ -1,7 +1,7 @@
 .card{
     width: 140px;
     height: 190px;
-    background: url(/Home/02_CSS/cards.7e0a18f0.png)      
+    background: url(../cards.7e0a18f0.png)      
 }
 .nine{
     background-position: 278px 1184px;
