--- a/Home/CSS/04_CSS/Base/workers_table.css
+++ b/Home/CSS/04_CSS/Base/workers_table.css
@@ -1,3 +1,22 @@
-td{
-    border: 1px dotted gray;
+td:not(.last){
+    border-right: 1px dotted gray;
+}
+td:not(.bottom){
+    border-bottom: 1px dotted gray;
+}
+.bottom{
+    text-align: center;
+}
+tr:not(:nth-child(even)){
+    background-color: aquamarine;
+}
+tr:first-child{
+    text-align: center;
+    background-color: aqua;
+}
+tr:last-child{
+    background-color: white;
+}
+table tr:hover{
+    background-color: blueviolet;
 }
