Foundation and Jquery

--- a/Home/CSS/04_CSS/Base/workers_table.css
+++ b/Home/CSS/04_CSS/Base/workers_table.css
@@ -1,6 +1,9 @@
 td:not(.last){
     border-right: 1px dotted gray;
 }
+caption{
+    caption-side: bottom;
+}
 td:not(.bottom){
     border-bottom: 1px dotted gray;
 }
